--- a/html/anatomiaPagina.html
+++ b/html/anatomiaPagina.html
@@ -15,6 +15,9 @@
         <section id="conteudo">
             Conteúdo
         </section>
+        <aside>
+            Lateral
+        </aside>
         <footer>
             Rodapé
         </footer>
