--- a/html/index.html
+++ b/html/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header>
-        Exercícios HTML
+        <h1>Exercícios HTML</h1>
     </header>
     <nav>
-        <a href="exercicios/teste.html"></a>
+        <a href="exercicios/teste.html">00 - Teste</a>
     </nav>
+    <section id="conteudo"></section>
 </body>
 </html>
