--- a/html/index.html
+++ b/html/index.html
@@ -14,5 +14,21 @@
         <a href="exercicios/teste.html">00 - Teste</a>
     </nav>
     <section id="conteudo"></section>
+    <footer>
+        <br>
+        Curso Web Moderno
+    </footer>
+    <script>
+        document.querySelectorAll('a').forEach(link => {
+            const conteudo = document.getElementById('conteudo')
+            
+            link.onclick = function(e) {
+                e.preventDefault()                
+                fetch(link.href)
+                    .then(resp => resp.text())
+                    .then(html => conteudo.innerHTML = html)
+            }
+        })
+    </script>
 </body>
 </html>
