--- a/html/exercicios/links.html
+++ b/html/exercicios/links.html
@@ -1,13 +1,23 @@
 <h1>Links</h1>
 
 <!-- URL ABSOLUTA -->
-<a href="http://www.google.com.br">Google 1</a><br>
+<a id="inicio" href="http://www.google.com.br">Google 1</a><br>
 <a href="http://www.google.com.br" target="_blank">Google 2</a><br><br>
 
 <!-- URL RELATIVA-->
-<a href="index.html">Voltar 1</a>
-<a href="/index.html">Voltar 2</a>
-<a href="../index.html">Voltar 3</a>
+<a href="index.html">Voltar 1</a><br>
+<a href="/index.html">Voltar 2</a><br>
+<a href="../index.html">Voltar 3</a><br><br>
+
+<a href="mailto:email@empresa.com.br">Entre em contato</a><br><br>
+
+<div id="noticia" style="position:absolute;top: 200px;">
+    <h1>Notícia Bomba!</h1><br>
+    <p>Não era nada... :)</p>
+    <a href="#inicio">Voltar Início</a>
+</div>
+
+<br><br><a href="#noticia">Ir para Notícia</a>
 
 
 
