--- a/html/exercicios/links.html
+++ b/html/exercicios/links.html
@@ -12,7 +12,7 @@
 <a href="mailto:email@empresa.com.br">Entre em contato</a><br><br>
 
 <div id="noticia" style="position:absolute;top: 200px;">
-    <h1>Notícia Bomba!</h1><br>
+    <h1>Notícia Bomba!</h1>
     <p>Não era nada... :)</p>
     <a href="#inicio">Voltar Início</a>
 </div>
