--- a/html/exercicios/tabela.html
+++ b/html/exercicios/tabela.html
@@ -1,8 +1,25 @@
-<table>
+<table border:"1">
     <caption>Produtos</caption>
     <thead>
         <tr>
             <th>Produtos</th>
+            <th>Preço</th>
+            <th>Quantidade</th>
+            <th>Total</th>
         </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>iPad</td>
+            <td>3289,00</td>
+            <td>5</td>
+            <td>16445</td>
+        </tr>
+        <tr>
+            <td>Samsung S10</td>
+            <td>2649,00</td>
+            <td>8</td>
+            <td>21192,00</td>
+        </tr>
+    </tbody>
 </table>
