--- a/html/exercicios/tabela.html
+++ b/html/exercicios/tabela.html
@@ -1,4 +1,4 @@
-<table border:"1">
+<table>
     <caption>Produtos</caption>
     <thead>
         <tr>
@@ -22,4 +22,34 @@
             <td>21192,00</td>
         </tr>
     </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="3">Total</td>
+            <td>37637,00</td>
+        </tr>
+    </tfoot>
 </table>
+
+<style>
+    table {
+        border-collapse:collapse ;
+    }
+
+    th , td {
+        padding: 10px;
+    }
+
+    thead tr {
+        border-bottom: solid 3px #444;
+    }
+
+    tbody tr:hover {
+        background-color: #dedede;        
+    }
+
+    tfoot {
+        background-color: #444;
+        color: #fff;
+        font-weight: bold;
+    }
+</style>
