--- a/html/exercicios/form/form.html
+++ b/html/exercicios/form/form.html
@@ -1,26 +1,24 @@
 <h1>Formulário</h1>
 
-<form method="post">
+<form method="POST">
     <input type="hidden" name="id" value="3">
-    <input type="text" name="nome">
+    <input type="text" name="name">
     <input type="password" name="senha">
     <textarea name="bio" cols="30" rows="10"></textarea>
     <div>
-        <input type="radio" name="tipo" value="admin">Admin
-        <input type="radio" name="tipo" value="regular">Regular
-        <input type="radio" name="tipo" value="professor">Professor
+        <input type="radio" name="tipo" value="admin"> Admin
+        <input type="radio" name="tipo" value="regular"> Regular
+        <input type="radio" name="tipo" value="professor"> Professor
     </div>
     <div>
-        <input type="checkbox" name="tipo">Ativo
+        <input type="checkbox" name="ativo"> Ativo
     </div>
+
     <select name="estado">
+        <option value="">Selecione</option>
         <option value="ac">Acre</option>
-        <option value="go">Goiás</option>
-        <option value="sp">São Paulo</option>
-        <option value="rj">Rio de Janeiro</option>
-        <option value="mg">Minas Gerais</option>
         <option value="ba">Bahia</option>
-        <option value="df">Brasília</option>
+        <option value="ce">Ceará</option>
     </select>
 
     <select name="interesses" multiple size="7">
@@ -37,7 +35,7 @@
 </form>
 
 <style>
-    input , 
+    input,
     textarea,
     select {
         display: block;
